--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "react-icons": "^4.10.1"
   }
 }
